...
                                <segue destination="f0L-6q-IA1" kind="presentation" id="Za1-0C-a4R"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem style="plain" systemItem="flexibleSpace" id="FY3-Mo-tDZ">
                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        </barButtonItem>
                        <barButtonItem title="新建类型" id="NtE-8J-Lh3">
                            <connections>
                                <action selector="handleCreateNewFolderAction:" destination="ayS-OZ-rqq" id="jaP-ry-mrh"/>
                            </connections>
                        </barButtonItem>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="EasyPassword" id="krs-Cn-Us2"/>
...
                                                                    <constraint firstAttribute="width" constant="26" id="idX-8b-SkW"/>
                                                                </constraints>
                                                                <connections>
                                                                    <action selector="handleEnterAction:" destination="T5a-mh-o7c" eventType="touchUpInside" id="X0C-DZ-RXC"/>
                                                                </connections>
                                                            </button>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="输入主密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xy2-Nf-xyW">
                                                                <rect key="frame" x="36" y="0.0" width="160" height="26"/>
                                                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="width" constant="160" id="xvD-nZ-xco"/>
                                                                </constraints>
                                                                <nil key="textColor"/>
...
                                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Fgs-0K-XmC">
                                                                <rect key="frame" x="0.0" y="176" width="220" height="34"/>
                                                                <subviews>
                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dyA-9g-pex">
                                                                        <rect key="frame" x="0.0" y="0.0" width="100" height="34"/>
                                                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                        <state key="normal" title="取消">
                                                                            <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                        </state>
                                                                        <connections>
                                                                            <action selector="handleCancelBtnAction:" destination="f0L-6q-IA1" eventType="touchUpInside" id="12b-76-yvz"/>
                                                                        </connections>
                                                                    </button>
...
                                                                    </view>
                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SJO-v8-3y1" userLabel="Content View">
                                                                        <rect key="frame" x="0.0" y="201" width="320" height="46"/>
                                                                        <subviews>
                                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PS5-9s-4bm">
                                                                                <rect key="frame" x="8" y="8" width="304" height="30"/>
                                                                                <state key="normal" title="生成新密码"/>
                                                                                <connections>
                                                                                    <action selector="handleGeneratePasswordAction:" destination="dK0-IT-uft" eventType="touchUpInside" id="idU-ss-ofr"/>
                                                                                </connections>
                                                                            </button>
                                                                        </subviews>
                                                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
...
