...
        
        var typeString: String {
            switch self {
            case .all:
                return "All Item Type on IPHONE"    //"IPHONE上的所有类型"
            case .login:
                return  "Login" //"登录信息"
            case .note:
                return  "Note"  //"备忘信息"
            }
        }
        
        var imageName: String {
...
